--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -23,7 +23,19 @@
     box-shadow: 2px 2px 5px gray;
   }
 }
-
+.dialog {
+  padding: 20px;
+  border-radius: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  width: 50vw;
+  height: 12vh;
+  background: rgba(97, 86, 86, 0.4);
+  z-index: 100;
+  color: #fff;
+}
 .wrapper {
   width: 60vw;
   padding: 20px;
@@ -53,17 +65,44 @@ ul {
 .success {
   color: #1ffc1f;
 }
-
+.edit {
+  position: absolute;
+  padding: 15px;
+  z-index: 100;
+  background: rgba(255, 255, 255, 1);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .width-100 {
   width: 100%;
 }
+p:not(:first-child) {
+  margin-top: 20px;
+}
 
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.block {
+  display: block;
+}
 .flex {
   display: flex;
 }
-
+.checked {
+  text-decoration: line-through;
+}
 .justify-content-between {
   justify-content: space-between;
+}
+.navigate-back {
+  width: 100%;
+  margin: 0;
+  text-align: left;
 }
 
 .align-item-center {
